node-directory-sync-example/public/stylesheets/style.css
body {
    font-family: Inter, sans-serif;
    background-color: #f9f9fb;
}

.container_login {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    width: 30%;
    height: 90vh;
}

.container_login img {
    height: 150px;
}

.container_login h1 {
    font-size: 65px;
    color: #111111;
    position: relative;
    bottom: 10px;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex_column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.space-between {
    justify-content: space-between;
}

.space-evenly {
    justify-content: space-evenly;
}

.flex-end {
    justify-content: flex-end;
}

.container_success {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    width: 100%;
}

.heading_div {
    margin: 25px 0px 25px 0px;
}

.heading_text_div {
    align-self: center;
}

.container_success {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    width: 100%;
    background-size: cover;
}

.button {
    background-color: #6363f1;
    border: 2px solid #6363f1;
    border-radius: 26px;
    color: white;
    padding: 8px 16px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    transition-duration: 0.4s;
    cursor: pointer;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
}

.button-outline {
    background-color: #f9f9fb;
    color: #6363f1;
    padding: 8px 16px;
}

.button:hover,
.button-outline:hover {
    background-color: #555555;
    border: 2px solid #555555;
    color: white;
}

.sales-button {
    margin-left: 10px;
}

.login_button {
    width: 95%;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
}

h2,
h1 {
    text-align: center;
    color: #555555;
}

.logged_in_div_right {
    height: 90vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    bottom: 10%;
}

.logged_in_div_left div {
    justify-content: left;
    position: relative;
    bottom: 20%;
}

.logged_in_div_left h1 {
    color: #111111;
    font-size: 75px;
    text-align: left;
    margin-bottom: 0px;
    font-weight: normal;
    letter-spacing: -0.05em;
}

.home-hero-gradient {
    background-image: linear-gradient(
        45deg,
        #a163f1,
        #6363f1 22%,
        #3498ea 40%,
        #40dfa3 67%,
        rgba(64, 223, 163, 0)
    );
    background-size: 150% 100%;
    background-repeat: no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    animation: intro-gradient 1.2s cubic-bezier(0.85, 0.26, 0.89, 0.93);
    animation-iteration-count: 1;
    animation-fill-mode: backwards;
    animation-delay: 0.4s;
    text-align: left;
    font-size: 75px;
    letter-spacing: -0.05em;
    font-weight: normal;
    margin-top: 0px;
}

.title-text {
    margin-bottom: -50px;
}

.title-subtext {
    color: gray;
    line-height: 10px;
    margin-bottom: 15px;
    font-weight: 200;
}

.logged_in_div_left button {
    padding: 8px 22px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
}

div.text_box {
    background-color: #f9f9fb;
    width: 40vw;
    max-height: 30vh;
    padding: 10px;
    word-wrap: break-word;
    overflow: scroll;
    border-width: 3px;
    border-style: solid;
    border-image: linear-gradient(
            #a163f1,
            #6363f1 22%,
            #3498ea 40%,
            #40dfa3 67%,
            rgba(64, 223, 163, 0)
        )
        0 100%;
}

.logged_in_nav {
    display: flex;
    justify-content: space-between;
    background-color: #f9f9fb;
    height: 60px;
    padding: 15px 30px 15px 30px;
    z-index: 998;
}

.logged_in_nav p {
    padding: 4px 0px 0px 15px;
    line-height: 1;
    color: #29363d;
}

.logged_in_nav img {
    height: 50px;
}

.nav-item {
    color: black;
    border: 2px solid #f9f9fb;
    background-color: #f9f9fb;
    box-shadow: none;
    border-radius: 5px;
}

.blog-nav-button {
    margin-right: 20px;
    background-color: #f9f9fb;
    border: 2px solid #f9f9fb;
}

.nav-item:hover {
    background-color: #f9f9fb;
    border: 2px solid #f9f9fb;
    color: #a6a4a4;
}

pre.prettyprint {
    border: none !important;
}

.text_input {
    border: 1px solid #555555;
    border-radius: 10px;
    margin: 7px 0px 7px 0px;
    padding: 5px;
    height: 35px;
    width: 18vw;
    text-align: center;
}

.factor_card {
    border: 1px solid #555555;
    border-radius: 10px;
    width: 20vw;
    margin: 0px 15px 0px 15px;
    padding: 25px;
}

.card {
    border: 1px solid #555555;
    border-radius: 10px;
    margin: 0px 15px 0px 15px;
    padding: 25px 50px;
    margin-bottom: 20px;
}

.code-input {
    width: 75px;
    height: 100px;
    margin: 0px 5px 30px 5px;
    font-size: 60px;
    color: darkslategray;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999;
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #fff;
    padding: 25px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.qr_code_instructions {
    width: 300px;
}

.qr_code {
    width: 300px;
    margin: 25px;
}

button:disabled {
    opacity: 0.5;
    pointer-events: none;
}

tr {
    text-align: center;
    border-bottom: 1px solid #ebebf2;
}

.ta-left {
    text-align: left;
}

tr:hover {
    background-color: #ebebf2;
}

table,
td {
    padding: 5px 40px;
}

table {
    border-collapse: collapse;
    border-radius: 5px;
    overflow: hidden;
    margin: 25px 0px;
}

th {
    text-align: center;
    font-weight: bolder;
    font-size: large;
    background-color: #e3e3e3;
    border-right: none;
    border-left: none;
    padding: 15px 40px;
}

.width-75 {
    width: 75%;
}

.width-10vw {
    width: 10vw;
}

.width-25vw {
    width: 25vw;
}

.width-40vw {
    width: 40vw;
}

.width-65vw {
    width: 65vw;
}

.width-70vw {
    width: 70vw;
}

.width-75vw {
    width: 75vw;
}

.width-175px {
    width: 175px;
}

.width-350px {
    width: 350px;
}

.width-440px {
    width: 440px;
}

.width-507px {
    width: 507px;
}

.width-587px {
    width: 587px;
}

.width-725px {
    width: 725px;
}

.height-70vh {
    height: 70vh;
}

.height-250px {
    height: 250px;
}

#noborder {
    border: none;
}

#noborder > :first-child {
    display: none;
}

